--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,6 +98,8 @@ body a{
 }
 
 .datas_input{
-     padding-right: 7px;
-    padding-left: 7px;
+    padding-right: 3px;
+    padding-left: 3px;
+    font-size: 13px;
+    
 }
