--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,33 @@ body a{
 
 }
  */
+body {
+    font-size: 12px;
+}
+
+input[type="text"]{
+    font-size:12px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 30px;
+    padding: 6px 10px;
+    font-size: 12;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 14px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
 
 .logo{
     
@@ -113,4 +140,3 @@ body a{
     font-size: 13px;
     
 }
-.botao_novo
