--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,7 @@ input[type="text"]{
     background: #b12020;
 }
 .action{
-    padding: 6px;
+    padding: 4px;
     color: #FFF;
     text-decoration: none;
     font-size: 1em;
@@ -152,6 +152,10 @@ input:focus, select:focus {
    -moz-box-shadow: 15px -10px 3px #000 !important;
 }
 
-
-
+.icone_botao_lista{
+   position: static !important;
+}
+.botao_lista{
+   height: 22px;
+}
 
