--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -193,3 +193,18 @@ footer {
     display: block;
     background: #F7F7D8;
 }
+
+.btn-circulo{
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+
+.cor-novo{
+    background-color: blue;
+    color: #3D276B;
+}
