--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -220,7 +220,9 @@ footer {
     padding-top: 5px;
     padding-bottom: 3px;
     margin-bottom: 3px;
+}
 
-
-
+.form-control:focus {
+    border-color: #CCD0D7;
+    box-shadow: 1px 1px !important;
 }
