--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -184,8 +184,15 @@ input[type="text"]{
 .icone_botao_lista{
    position: static !important;
 }
+
 .botao_lista{
    height: 22px;
+}
+
+.botao_lista_dados{
+    padding-top: 1px;
+    padding-left: 3px;
+    height: 22px;
 }
 
 body .container.body .right_col {
@@ -252,3 +259,7 @@ footer {
 .alinha_esquerda{
     padding-left: 0px;
 }
+
+
+
+
