--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -202,6 +202,11 @@ input[type="text"]{
 }
 
 
+.btn_tb_cargo_remove{
+    height: 18px;
+    width: 18px;
+}
+
 
 .icone_botao_lista{
    position: static !important;
