--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -202,10 +202,7 @@ input[type="text"]{
 }
 
 
-.btn_tb_cargo_remove{
-    height: 18px;
-    width: 18px;
-}
+
 
 
 .icone_botao_lista{
@@ -228,13 +225,15 @@ body .container.body .right_col {
 
 
 .btn-circulo{
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 12px;
-  line-height: 1.428571429;
-  border-radius: 15px;
+  width: 30px !important;
+  height: 30px !important;
+  text-align: center !important;
+  padding: 6px 0 !important;
+  font-size: 12px !important;
+  line-height: 1.428571429 !important;
+  border-radius: 15px !important;
+  margin-right: 0px !important;
+  text-align: center !important;
 }
 
 .cor-novo{
@@ -420,3 +419,11 @@ body .container.body .right_col {
     color: #3D276B;
 }
 
+.botao_acao{
+    padding: 1px 3px 1px 3px !important;
+    font-size: 11px !important;
+}
+
+.foto{
+    position: absolute;
+}
