--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -223,8 +223,8 @@ input[type="text"]{
 }
 
 .botao_acao{
-  padding: 3px 5px !important;
-  font-size: 8px !important;
+  padding: 1px 3px 0px 3px !important;
+  font-size: 12px !important;
 }
 
 
