--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -208,6 +208,13 @@ input[type="text"]{
 	font-size: 12px!important;
 }
 
+.horas_input{
+	padding-right: 0px!important;
+	padding-left: 0px!important;
+	font-size: 12px!important;
+}
+
+
 .nu_loja_input{
 	
 	padding-left: 2px;
