--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20011,3 +20011,9 @@ body .container.body .right_col {
   direction: initial;
 }
 
+.presensa_sessao {
+  border: 0;
+  background: white;
+  width: 100%;
+}
+
