--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -392,3 +392,10 @@ body .container.body .right_col {
 	text-align: start;
 	direction: initial;
 }
+
+.presensa_sessao {
+	border: 0;
+	background: white;
+	width: 100%; 
+
+}
