commit informações de sessão

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -393,7 +393,7 @@ body .container.body .right_col {
 	direction: initial;
 }
 
-.presensa_sessao {
+.presenca_sessao {
 	border: 0;
 	background: white;
 	width: 100%; 
