--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -255,9 +255,14 @@ input[type="text"]{
 }
 
 
-.btn_tb_cargo_remove{
+.btn_tb_cargo_remove {
 	height: 18px;
 	width: 18px;
+}
+
+.btn_tb_membro_remove{
+
+	padding: 1;
 }
 
 
