membros na sessao passando por array

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -261,8 +261,10 @@ input[type="text"]{
 }
 
 .btn_tb_membro_remove{
-
-	padding: 1;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	padding-left: 3px;
+	padding-right: 3px;
 }
 
 
